--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,11 @@ default: &default
 
 development:
   <<: *default
+  adapter: postgresql
   database: milk_development
+  pool: 5
+  username: park3
+  
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
